tests/errors/validation/init-at-top-level.fn
---
Description: Constructor declared at top level outside any type
Expected: FN2000
---

init()
{
}

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
